--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 Wordlists/
-#For testing purposes I decompressed the rockyou wordlist on my end, to keep from having to compress it after every test we're just ignoring any changes to this directory for now.
+# For liscensing purposes I removed the wordlists from this repository. However at this time I am leaving the Wordlist directory here to help me with testing.
+# If you would like to use the wordlists from this repository, please see the README.md file for instructions on how to download them.
 __pycache__/
